Employee.team_id reference
